ZMP LInux/MacOS Build
- Added new ZMP application to Linux/MacOS Build
- More ZX cleanup

--- a/Tools/unix/zx/zx.html
+++ b/Tools/unix/zx/zx.html
@@ -6,7 +6,7 @@
 Windows command line.  It is compatible with Windows XP and greater (both
 32 and 64 bit).</p>
 
-<p><em>zx</em> is basically a port of a subset of the zxcc package by John Elliott.
+<p><em>zx</em> is basically a port of a subset of the zxcc program by John Elliott.
 The GPLv2 licensing carries forward.  Please refer to the
 <a href="http://http://www.seasip.info/Unix/Zxcc/">
 zxcc web page</a> for more information.</p>
@@ -15,7 +15,8 @@ zxcc web page</a> for more information.</p>
 execution of the Hi-Tech C CP/M compiler under Unix, <em>zx</em> is slightly
 more general and intended to allow running most CP/M tools.  Specific
 changes were incorporated to improve interactice console operation of
-CP/M applications.</p>
+CP/M applications.  Additionally, Curt Mayer added case insensitivity
+for filenames under Unix variants.</p>
 
 <h2>Setup</h2>
 
