--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -189,7 +189,7 @@
 <p><strong>RomWBW Introduction</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-31 May 2025</p>
+01 Jun 2025</p>
 <h1 id="overview">Overview</h1>
 <p>RomWBW software provides a complete, commercial quality implementation
 of CP/M (and workalike) operating systems and applications for modern
@@ -207,9 +207,8 @@ these developer communities:</p>
 <li><a href="https://smallcomputercentral.com/">Small Computer Central</a>
   (<a href="https://smallcomputercentral.com/">https://smallcomputercentral.com/</a>)</li>
 </ul>
-<p>A complete list of the currently supported platforms is found in <a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/RomWBW%20Hardware.pdf">RomWBW
-Hardware</a>
-.</p>
+<p>A complete list of the currently supported platforms is found in <a href="../Hardware/">RomWBW
+Hardware</a> .</p>
 <h1 id="description">Description</h1>
 <h2 id="primary-features">Primary Features</h2>
 <p>By design, RomWBW isolates all of the hardware specific functions in the
@@ -331,9 +330,8 @@ distribution. Subsequently, you can write disk images on your disk
 drives (IDE disk, CF Card, SD Card, etc.) which then provides even more
 functionality.</p>
 <p>Complete instructions for installation and operation of RomWBW are found
-in the <a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/RomWBW%20User%20Guide.pdf">RomWBW User
-Guide</a>.
-It is also a good idea to review the <a href="https://github.com/wwarthen/RomWBW/blob/master/RELEASE_NOTES.md">Release
+in the <a href="../UserGuide/">RomWBW User Guide</a>. It is also a good idea to
+review the <a href="https://github.com/wwarthen/RomWBW/blob/master/RELEASE_NOTES.md">Release
 Notes</a>
 for helpful release-specific information.</p>
 <h2 id="documentation">Documentation</h2>
@@ -341,35 +339,29 @@ for helpful release-specific information.</p>
 documentation:</p>
 <ul>
 <li>
-<p><a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/RomWBW%20User%20Guide.pdf">RomWBW User
-  Guide</a>
-  is the main user guide for RomWBW, it covers the major topics of how
-  to install, manage and use RomWBW, and includes additional guidance to
-  the use of some of the operating systems supported by RomWBW</p>
+<p><a href="../UserGuide/">RomWBW User Guide</a> is the main user guide for RomWBW,
+  it covers the major topics of how to install, manage and use RomWBW,
+  and includes additional guidance to the use of some of the operating
+  systems supported by RomWBW</p>
 </li>
 <li>
-<p><a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/RomWBW%20Hardware.pdf">RomWBW
-  Hardware</a>
-  contains a description of all the hardware platforms, and devices
-  supported by RomWBW.</p>
+<p><a href="../Hardware/">RomWBW Hardware</a> contains a description of all the
+  hardware platforms, and devices supported by RomWBW.</p>
 </li>
 <li>
-<p><a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/RomWBW%20Applications.pdf">RomWBW
-  Applications</a>
-  is a reference for the ROM-hosted and OS-hosted applications created
-  or customized to enhance the operation of RomWBW.</p>
+<p><a href="../Applications/">RomWBW Applications</a> is a reference for the
+  ROM-hosted and OS-hosted applications created or customized to enhance
+  the operation of RomWBW.</p>
 </li>
 <li>
-<p><a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/RomWBW%20Disk%20Catalog.pdf">RomWBW Disk
-  Catalog</a>
-  is a reference for the contents of the disk images provided with
-  RomWBW, with a description of many of the files on each image</p>
+<p><a href="../Catalog/">RomWBW Disk Catalog</a> is a reference for the contents of
+  the disk images provided with RomWBW, with a description of many of
+  the files on each image</p>
 </li>
 <li>
-<p><a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/RomWBW%20System%20Guide.pdf">RomWBW System
-  Guide</a>
-  discusses much of the internal design and construction of RomWBW. It
-  includes a reference for the RomWBW HBIOS API functions.</p>
+<p><a href="../SystemGuide/">RomWBW System Guide</a> discusses much of the internal
+  design and construction of RomWBW. It includes a reference for the
+  RomWBW HBIOS API functions.</p>
 </li>
 </ul>
 <p>Each of the operating systems and ROM applications included with RomWBW
