--- a/SystemGuide/index.html
+++ b/SystemGuide/index.html
@@ -659,7 +659,7 @@
 <p><strong>RomWBW System Guide</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-31 May 2025</p>
+01 Jun 2025</p>
 <h1 id="overview">Overview</h1>
 <p>The objective of RomWBW is to provide firmware, operating systems, and
 applications targeting the Z80 family of CPUs. The firmware, in the form
@@ -5468,7 +5468,7 @@ identifier. The Status (A) is a standard HBIOS result code.</p>
 </tr>
 </tbody>
 </table>
-<p>For more information on these platforms see <a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/RomWBW%20Hardware.pdf">RomWBW
+<p>For more information on these platforms see <a href="../Hardware/">RomWBW
 Hardware</a></p>
 <h3 id="function-0xf2-system-set-bank-syssetbnk">Function 0xF2 – System Set Bank (SYSSETBNK)</h3>
 <table>
