--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <p><strong>RomWBW ReadMe</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-31 May 2025</p>
+01 Jun 2025</p>
 <h1 id="overview">Overview</h1>
 <p>RomWBW software provides a complete, commercial quality implementation
 of CP/M (and workalike) operating systems and applications for modern
@@ -246,26 +246,19 @@ distribution. Subsequently, you can write disk images on your disk
 drives (IDE disk, CF Card, SD Card, etc.) which then provides even more
 functionality.</p>
 <p>Complete instructions for installation and operation of RomWBW are found
-in the <a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/RomWBW%20User%20Guide.pdf">RomWBW User
-Guide</a>.
-It is also a good idea to review the <a href="https://github.com/wwarthen/RomWBW/blob/master/RELEASE_NOTES.md">Release
+in the <a href="UserGuide/">RomWBW User Guide</a>. It is also a good idea to
+review the <a href="https://github.com/wwarthen/RomWBW/blob/master/RELEASE_NOTES.md">Release
 Notes</a>
 for helpful release-specific information.</p>
 <h2 id="documentation">Documentation</h2>
 <p>Documentation for RomWBW includes:</p>
 <ul>
-<li><a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/RomWBW%20Introduction.pdf">RomWBW
-  Introduction</a></li>
-<li><a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/RomWBW%20User%20Guide.pdf">RomWBW User
-  Guide</a></li>
-<li><a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/RomWBW%20System%20Guide.pdf">RomWBW System
-  Guide</a></li>
-<li><a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/RomWBW%20Applications.pdf">RomWBW
-  Applications</a></li>
-<li><a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/RomWBW%20Disk%20Catalog.pdf">RomWBW Disk
-  Catalog</a></li>
-<li><a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/RomWBW%20Hardware.pdf">RomWBW
-  Hardware</a></li>
+<li><a href="Introduction/">RomWBW Introduction</a></li>
+<li><a href="UserGuide/">RomWBW User Guide</a></li>
+<li><a href="SystemGuide/">RomWBW System Guide</a></li>
+<li><a href="Applications/">RomWBW Applications</a></li>
+<li><a href="Catalog/">RomWBW Disk Catalog</a></li>
+<li><a href="Hardware/">RomWBW Hardware</a></li>
 </ul>
 <h1 id="acknowledgments">Acknowledgments</h1>
 <p>I want to acknowledge that a great deal of the code and inspiration for
@@ -543,5 +536,5 @@ Repository</a>.</p>
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-06-01 00:31:02.955089+00:00
+Build Date UTC : 2025-06-02 00:13:37.728238+00:00
 -->
