deploy: f2e42dd9d891e2ed3ca336f6a4979c60168ec959

--- a/Hardware/index.html
+++ b/Hardware/index.html
@@ -384,7 +384,7 @@
 <p><strong>RomWBW Hardware</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-01 Jun 2025</p>
+02 Jun 2025</p>
 <h1 id="overview">Overview</h1>
 <h2 id="supported-platforms">Supported Platforms</h2>
 <p>This section contains a summary of the system configuration target for
@@ -4244,6 +4244,10 @@ the active platform and configuration.</p>
 <tr>
 <td>VRC</td>
 <td>VGARC Video Display Controller</td>
+</tr>
+<tr>
+<td>XOSERA</td>
+<td>XOSERA FPGA-based Video Display Controller</td>
 </tr>
 </tbody>
 </table>
