--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -189,7 +189,7 @@
 <p><strong>RomWBW Introduction</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-01 Jun 2025</p>
+02 Jun 2025</p>
 <h1 id="overview">Overview</h1>
 <p>RomWBW software provides a complete, commercial quality implementation
 of CP/M (and workalike) operating systems and applications for modern
@@ -223,7 +223,7 @@ Card) and move it between systems transparently.</p>
 <li>Disk drivers for RAM, ROM, Floppy, IDE ATA/ATAPI, CF, SD, USB, Zip,
   Iomega</li>
 <li>Serial drivers including UART (16550-like), ASCI, ACIA, SIO</li>
-<li>Video drivers including TMS9918, SY6545, MOS8563, HD6445</li>
+<li>Video drivers including TMS9918, SY6545, MOS8563, HD6445, Xosera</li>
 <li>Keyboard (PS/2) drivers via VT8242 or PPI interfaces</li>
 <li>Real time clock drivers including DS1302, BQ4845</li>
 <li>Support for CP/NET networking using Wiznet, MT011 or Serial</li>
@@ -542,7 +542,8 @@ let me know if I missed you!</p>
 <p>Les Bird has contributed support for the NABU w/ Option Board</p>
 </li>
 <li>
-<p>Rob Gowin created an online documentation site via MkDocs.</p>
+<p>Rob Gowin created an online documentation site via MkDocs, and
+  contributed a driver for the Xosera FPGA-based video controller.</p>
 </li>
 </ul>
 <h2 id="related-projects">Related Projects</h2>
