--- a/SystemGuide/index.html
+++ b/SystemGuide/index.html
@@ -659,7 +659,7 @@
 <p><strong>RomWBW System Guide</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-01 Jun 2025</p>
+02 Jun 2025</p>
 <h1 id="overview">Overview</h1>
 <p>The objective of RomWBW is to provide firmware, operating systems, and
 applications targeting the Z80 family of CPUs. The firmware, in the form
@@ -3671,6 +3671,24 @@ enumerates their values.</p>
 <td style="text-align: right;">0x05</td>
 <td>VGARC</td>
 <td>vrc.asm</td>
+</tr>
+<tr>
+<td>VDADEV_EF</td>
+<td style="text-align: right;">0x06</td>
+<td>EF9345</td>
+<td>ef.asm</td>
+</tr>
+<tr>
+<td>VDADEV_FV</td>
+<td style="text-align: right;">0x07</td>
+<td>S100 FPGA VGA</td>
+<td>fv.asm</td>
+</tr>
+<tr>
+<td>VDADEV_XOSERA</td>
+<td style="text-align: right;">0x08</td>
+<td>Xosera FPGA-based Video Display Controller</td>
+<td>xosera.asm</td>
 </tr>
 </tbody>
 </table>
